@@ -17,7 +17,7 @@
 
 package org.apache.solr.cloud;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import org.apache.solr.SolrTestCaseJ4;
@@ -76,32 +76,17 @@ public class ZkDistributedLockTest extends SolrTestCaseJ4 {
     // Collection level locks
     DistributedLock collRL1 =
         factory.createLock(
-            false,
-            CollectionParams.LockLevel.COLLECTION,
-            COLLECTION_NAME,
-            null,
-            null,
-            Collections.emptyList());
+            false, CollectionParams.LockLevel.COLLECTION, COLLECTION_NAME, null, null, List.of());
     assertTrue("collRL1 should have been acquired", collRL1.isAcquired());
 
     DistributedLock collRL2 =
         factory.createLock(
-            false,
-            CollectionParams.LockLevel.COLLECTION,
-            COLLECTION_NAME,
-            null,
-            null,
-            Collections.emptyList());
+            false, CollectionParams.LockLevel.COLLECTION, COLLECTION_NAME, null, null, List.of());
     assertTrue("collRL1 should have been acquired", collRL2.isAcquired());
 
     DistributedLock collWL3 =
         factory.createLock(
-            true,
-            CollectionParams.LockLevel.COLLECTION,
-            COLLECTION_NAME,
-            null,
-            null,
-            Collections.emptyList());
+            true, CollectionParams.LockLevel.COLLECTION, COLLECTION_NAME, null, null, List.of());
     assertFalse(
         "collWL3 should not have been acquired, due to collRL1 and collRL2", collWL3.isAcquired());
 
@@ -116,12 +101,7 @@ public class ZkDistributedLockTest extends SolrTestCaseJ4 {
 
     DistributedLock collRL4 =
         factory.createLock(
-            false,
-            CollectionParams.LockLevel.COLLECTION,
-            COLLECTION_NAME,
-            null,
-            null,
-            Collections.emptyList());
+            false, CollectionParams.LockLevel.COLLECTION, COLLECTION_NAME, null, null, List.of());
     assertFalse(
         "collRL4 should not have been acquired, due to collWL3 locking the collection",
         collRL4.isAcquired());
@@ -131,24 +111,14 @@ public class ZkDistributedLockTest extends SolrTestCaseJ4 {
     // should see no impact.
     DistributedLock shardWL5 =
         factory.createLock(
-            true,
-            CollectionParams.LockLevel.SHARD,
-            COLLECTION_NAME,
-            SHARD_NAME,
-            null,
-            Collections.emptyList());
+            true, CollectionParams.LockLevel.SHARD, COLLECTION_NAME, SHARD_NAME, null, List.of());
     assertTrue(
         "shardWL5 should have been acquired, there is no lock on that shard",
         shardWL5.isAcquired());
 
     DistributedLock shardWL6 =
         factory.createLock(
-            true,
-            CollectionParams.LockLevel.SHARD,
-            COLLECTION_NAME,
-            SHARD_NAME,
-            null,
-            Collections.emptyList());
+            true, CollectionParams.LockLevel.SHARD, COLLECTION_NAME, SHARD_NAME, null, List.of());
     assertFalse(
         "shardWL6 should not have been acquired, shardWL5 is locking that shard",
         shardWL6.isAcquired());
@@ -161,7 +131,7 @@ public class ZkDistributedLockTest extends SolrTestCaseJ4 {
             COLLECTION_NAME,
             SHARD_NAME,
             REPLICA_NAME,
-            Collections.emptyList());
+            List.of());
     assertTrue("replicaRL7 should have been acquired", replicaRL7.isAcquired());
 
     DistributedLock replicaWL8 =
@@ -171,7 +141,7 @@ public class ZkDistributedLockTest extends SolrTestCaseJ4 {
             COLLECTION_NAME,
             SHARD_NAME,
             REPLICA_NAME,
-            Collections.emptyList());
+            List.of());
     assertFalse(
         "replicaWL8 should not have been acquired, replicaRL7 is read locking that replica",
         replicaWL8.isAcquired());
@@ -205,23 +175,13 @@ public class ZkDistributedLockTest extends SolrTestCaseJ4 {
     // Acquiring right away a read lock
     DistributedLock readLock =
         factory.createLock(
-            false,
-            CollectionParams.LockLevel.COLLECTION,
-            COLLECTION_NAME,
-            null,
-            null,
-            Collections.emptyList());
+            false, CollectionParams.LockLevel.COLLECTION, COLLECTION_NAME, null, null, List.of());
     assertTrue("readLock should have been acquired", readLock.isAcquired());
 
     // And now creating a write lock, that can't be acquired just yet, because of the read lock
     DistributedLock writeLock =
         factory.createLock(
-            true,
-            CollectionParams.LockLevel.COLLECTION,
-            COLLECTION_NAME,
-            null,
-            null,
-            Collections.emptyList());
+            true, CollectionParams.LockLevel.COLLECTION, COLLECTION_NAME, null, null, List.of());
     assertFalse("writeLock should not have been acquired", writeLock.isAcquired());
 
     // Wait for acquisition of the write lock on another thread (and be notified via a latch)
